# saas_template_rs

./: .env.sample  .gitignore  ;  Cargo.toml  LICENSE  Makefile  README.md  app_config.json
src/: apidoc.rs  cache.rs  config.rs  handler.rs  http.rs  jwt_codec.rs  lib.rs  main.rs  model.rs  openapi.rs  repo.rs  result_trace.rs  service.rs  state.rs
src/apidoc/: auth.rs  health.rs  user.rs
src/handler/: health.rs
src/http/: auth.rs  health.rs  middleware.rs  result.rs  user.rs
src/model/: health.rs  user.rs
src/repo/: user.rs
src/service/: auth.rs  health.rs  result.rs  user.rs
